--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-*.iml
 .gradle
 /local.properties
-/.idea
+/.idea/workspace.xml
+/.idea/libraries
 .DS_Store
-**/build
+/build
 /captures
-.externalNativeBuild
-.cxx
-local.properties
+
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+build/
+*.iml
+.idea
